scheduler is on

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Unicat</title>
+<title>Online Training Course</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Unicat project">
@@ -58,7 +58,7 @@
 						<div class="header_content d-flex flex-row align-items-center justify-content-start">
 							<div class="logo_container">
 								<a href="#">
-									<div class="logo_text">Unic<span>at</span></div>
+									<div class="logo_text">ELearn<span>ing</span></div>
 								</a>
 							</div>
 							<nav class="main_nav_contaner ml-auto">
@@ -139,7 +139,7 @@
 				
 				<!-- Home Slider Item -->
 				<div class="owl-item">
-					<div class="home_slider_background" style="background-image:url(images/home_slider_1.jpg)"></div>
+					<div class="home_slider_background" style="background-image:url(images/home_slider_2.jpg)"></div>
 					<div class="home_slider_content">
 						<div class="container">
 							<div class="row">
@@ -148,7 +148,7 @@
 									<div class="home_slider_subtitle">Future Of Education Technology</div>
 									<div class="home_slider_form_container">
 										<form action="#" id="home_search_form_1" class="home_search_form d-flex flex-lg-row flex-column align-items-center justify-content-between">
-											<div class="d-flex flex-row align-items-center justify-content-start">
+											<!-- <div class="d-flex flex-row align-items-center justify-content-start">
 												<input type="search" class="home_search_input" placeholder="Keyword Search" required="required">
 												<select class="dropdown_item_select home_search_input">
 													<option>Category Courses</option>
@@ -160,8 +160,8 @@
 													<option>Price Type</option>
 													<option>Price Type</option>
 												</select>
-											</div>
-											<button type="submit" class="home_search_button">search</button>
+											</div> 
+											<button type="submit" class="home_search_button">search</button>-->
 										</form>
 									</div>
 								</div>
@@ -172,7 +172,7 @@
 
 				<!-- Home Slider Item -->
 				<div class="owl-item">
-					<div class="home_slider_background" style="background-image:url(images/home_slider_1.jpg)"></div>
+					<div class="home_slider_background" style="background-image:url(images/home_slider_3.jpg)"></div>
 					<div class="home_slider_content">
 						<div class="container">
 							<div class="row">
@@ -181,7 +181,7 @@
 									<div class="home_slider_subtitle">Future Of Education Technology</div>
 									<div class="home_slider_form_container">
 										<form action="#" id="home_search_form_2" class="home_search_form d-flex flex-lg-row flex-column align-items-center justify-content-between">
-											<div class="d-flex flex-row align-items-center justify-content-start">
+											<!-- <div class="d-flex flex-row align-items-center justify-content-start">
 												<input type="search" class="home_search_input" placeholder="Keyword Search" required="required">
 												<select class="dropdown_item_select home_search_input">
 													<option>Category Courses</option>
@@ -194,7 +194,7 @@
 													<option>Price Type</option>
 												</select>
 											</div>
-											<button type="submit" class="home_search_button">search</button>
+											<button type="submit" class="home_search_button">search</button> -->
 										</form>
 									</div>
 								</div>
@@ -214,7 +214,7 @@
 									<div class="home_slider_subtitle">Future Of Education Technology</div>
 									<div class="home_slider_form_container">
 										<form action="#" id="home_search_form_3" class="home_search_form d-flex flex-lg-row flex-column align-items-center justify-content-between">
-											<div class="d-flex flex-row align-items-center justify-content-start">
+											<!-- <div class="d-flex flex-row align-items-center justify-content-start">
 												<input type="search" class="home_search_input" placeholder="Keyword Search" required="required">
 												<select class="dropdown_item_select home_search_input">
 													<option>Category Courses</option>
@@ -227,7 +227,7 @@
 													<option>Price Type</option>
 												</select>
 											</div>
-											<button type="submit" class="home_search_button">search</button>
+											<button type="submit" class="home_search_button">search</button> -->
 										</form>
 									</div>
 								</div>
@@ -252,7 +252,7 @@
 			<div class="row">
 				<div class="col">
 					<div class="section_title_container text-center">
-						<h2 class="section_title">Welcome To Unicat E-Learning</h2>
+						<h2 class="section_title">Welcome To E-Learning</h2>
 						<div class="section_subtitle"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel gravida arcu. Vestibulum feugiat, sapien ultrices fermentum congue, quam velit venenatis sem</p></div>
 					</div>
 				</div>
@@ -788,7 +788,7 @@
 								<div class="footer_section footer_about">
 									<div class="footer_logo_container">
 										<a href="#">
-											<div class="footer_logo_text">Unic<span>at</span></div>
+											<div class="footer_logo_text">ELearn<span>ing</span></div>
 										</a>
 									</div>
 									<div class="footer_about_text">
